[tool.poetry]
package-mode = false
name = "space-trace-collisions"
version = "0.1.0"
description = ""
authors = ["crsenn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sgp4 = "^2.23"
mypy = "^1.14.1"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
